[package]
name = "combinatory"
version = "1.0.0"
edition = "2021"

authors = ["Jorge Rico Vivas <jorgericoinformatic@gmail.com>"]
description = "Create every combination possible of values of 2D collections / iterators."
repository = "https://github.com/JorgeRicoVivas/combinatory"
keywords = ["math", "logic", "combinatory"]
categories = ["no-std"]
license-file = "LICENSE.txt"
readme = "README.md"

[lib]